--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "ioredis": "^2.4.0",
+    "math": "0.0.3",
     "method-override": "^2.3.6",
-    "node-gyp": "^3.4.0",
+    "moment": "^2.17.0",
+    "mongoose": "^4.7.1",
     "node-sass-middleware": "^0.9.8",
-    "node-uuid": "^1.4.7",
     "pug": "^2.0.0-beta6",
-    "rebuild": "^0.1.2",
-    "sqlite": "^2.2.0"
+    "sqlite": "^2.2.0",
+    "type-of-is": "^3.4.0",
+    "uuid": "^3.0.1"
   }
 }
